<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="username_email">Username/Email</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password"> <u>Forgot Password?</u> </string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="or">Or</string>
    <string name="you_don_t_have_an_account_sign_up">You don\'t have an account? <font color="#A0615F">Sign up</font></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="retype_password">Retype password</string>
    <string name="create_your_account">CREATE YOUR ACCOUNT</string>
    <string name="you_have_a_account_sign_in">You have a account? <font color="#A0615F">Sign in</font></string>
    <string name="email_is_empty">Email đang trống</string>
    <string name="password_is_empty">Mật khẩu đang trống</string>
    <string name="retype_password_is_empty">Xác nhận mật khẩu đang trống</string>
    <string name="retype_not_equal_to_password">Mật khẩu không khớp</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="register_false">Đăng kí thất bại</string>
    <string name="password_is_too_short">Mật khẩu quá ngắn</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="email_already_in_used">Email đã được sử dụng</string>
    <string name="sign_in_false">Đăng nhập thất bại</string>
    <string name="email_not_found">Email không tồn tại</string>
    <string name="account_is_disable">Tài khoản đã bị vô hiệu hoá</string>
    <string name="email_or_password_is_wrong">Sai tài khoản hoặc mật khẩu</string>
    <string name="men_s_clothes">Men\'s Clothes</string>
    <string name="top">Top</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="shirt">Shirt</string>
    <string name="hoodie">Hoodie</string>
    <string name="sweater">Sweater</string>
    <string name="bottom">Bottom</string>
    <string name="shorts">Shorts</string>
    <string name="pans">Pans</string>
    <string name="woman_s_clothes">Woman\'s Clothes</string>
    <string name="skirts">Skirt</string>
    <string name="accessory">Accessory</string>
    <string name="hat">Hat</string>
    <string name="socks">Socks</string>
    <string name="tsuki">Tsuki</string>
    <string name="search_anything">search anything</string>
    <string name="my_account">My Account</string>
    <string name="log_out">Log out</string>
    <string name="empty_user_info">Người dùng không tồn tại</string>
    <string name="my_profile">My profile</string>
    <string name="your_order">Your order</string>
    <string name="confirming">Confirming</string>
    <string name="packing">Packing</string>
    <string name="delivering">Delivering</string>
    <string name="your_information">Your information</string>
    <string name="edit_profile">Edit profile</string>
    <string name="unknown">UnKnown</string>
    <string name="explore_more">Explore more</string>
    <string name="woman_s_clothers">Woman\'s Clothers</string>
    <string name="men_s_clothers">Men\'s Clothers</string>
    <string name="client_services">CLIENT SERVICES</string>
    <string name="faq">FAQ</string>
    <string name="contact">Contact</string>
    <string name="the_house_of_tsuki">THE HOUSE OF Tsuki</string>
    <string name="legal_terms">Legal Terms</string>
    <string name="ethics_compliance"><![CDATA[Ethics & compliance]]></string>
    <string name="follow_us">Follow Us</string>
    <string name="sitemap">Sitemap</string>
    <string name="careers">Careers</string>
    <string name="dior_sustainability">Dior Sustainability</string>
    <string name="country_region">Country / Region</string>
    <string name="language">Language</string>
    <string name="you_have_not_created_a_profile_yet">We can\'t find your profile maybe it not have created or something wrong.</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="your_address">Your Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="my_shop">My shop</string>
    <string name="add_your_shop">Add your shop</string>
    <string name="test_text">Tuan\'s shop</string>
    <string name="long_test_text">Đây là dòng chữ dài và nó sẽ chạy khi không đủ không gian hiển thị.</string>
    <string name="something_was_wrong_when_we_try_loading_your_created_shop_please_try_again_now_or_late">Something was wrong when we try loading your created shop. Please try again now or late</string>
    <string name="shop_items">Shop\'s items</string>
    <string name="show_all_item">Show all item</string>
    <string name="add_item_in_shop">Add item in shop</string>
    <string name="something_was_wrong_when_we_try_to_loading_your_data_please_try_again_now_or_some_time_late">Something was wrong when we try to loading your data. Please, try again now or some time late.</string>
    <string name="show_all_order">Show all order</string>
    <string name="shop_s_order">Shop\'s order</string>
    <string name="your_store_currently_has_no_orders_we_ll_update_the_list_as_soon_as_products_are_purchased">Your store currently has no orders. We’ll update the list as soon as products are purchased.</string>
    <string name="admin">Admin</string>
    <string name="all_item">All item</string>
    <string name="add_item">Add item</string>
    <string name="type">Type:</string>
    <string name="time_span">TimeSpan:</string>
    <string name="status">Status:</string>
    <string name="add_order">Add order</string>
    <string name="all_order">All order</string>
    <string name="your_store_currently_has_no_products_available_we_will_notify_you_as_soon_as_new_products_become_available">Your store currently has no products available, we will notify you as soon as new products become available.</string>
    <string name="product_name">Product name</string>
    <string name="your_product_s_name">Your product\'s name</string>
    <string name="add_product_s_main_image">Add product\'s main image</string>
    <string name="product_information_image">Product information image</string>
    <string name="upload_photos">Upload photos</string>
    <string name="product_type">Product type</string>
    <string name="your_product_type">Your product\'s type</string>
    <string name="product_description">Product description</string>
    <string name="your_product_s_description">Your produc\'s description</string>
    <string name="for_gender">For gender</string>
    <string name="product_price">Product price</string>
    <string name="your_product_s_price">Your product\'s price</string>
    <string name="add_product">Add product</string>
    <string name="default_item_number">0</string>
    <string name="product_variant">Product variant</string>
    <string name="add_variant">Add variant</string>
    <string name="add_count">Add count</string>
    <string name="sub_count">Sub count</string>
    <string name="remove_this_variant">Remove this variant</string>
    <string name="you_need_to_fill_in_all_the_information_about_the_product">You need to fill in all the information about the product.</string>
    <string name="color">Color</string>
    <string name="custom">Custom</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove">Remove</string>
    <string name="update_product">UPDATE PRODUCT</string>
    <string name="check_out">Check out</string>
    <string name="all_product">All product</string>
    <string name="temp_name">Temp name</string>
    <string name="size">Size</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="in_total">In total</string>
    <string name="buy_now">Buy now</string>
    <string name="amount">Amount</string>
    <string name="_39">$39</string>
    <string name="_1">1</string>
    <string name="description">Description</string>
    <string name="tsuki_market_studio_unisex_clothing_ethically_made_created_and_designed_by_felix_and_marzia_kjellberg_tsuki_sweater_screen_printed_100_cotton_made_in_the_u_s_a"><![CDATA[Tsuki Market Studio Unisex clothing. Ethically made. Created and designed by Felix and Marzia Kjellberg. tsuki sweater Screen printed. 100% cotton.  Made in the U.S.A.]]></string>
    <string name="other_products">Other products</string>
    <string name="please_wait_this_maybe_take_a_momennt">Please, wait this maybe take a moment</string>
    <string name="price_display">$%.2f</string>
    <string name="_0">0</string>
    <string name="please_choose_size_for_the_product">Please choose size for the product</string>
    <string name="something_was_wrong_when_we_get_variant_for_this_product_please_try_again_late">Something was wrong when we get variant for this product. Please try again late.</string>
    <string name="your_cart">Your cart</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="product_main_image">product main image</string>
    <string name="size_selected">Size: %s </string>
    <string name="color_selected">Color: %s</string>
    <string name="add_button">add button</string>
    <string name="remove_button">remove button</string>
    <string name="your_order_summary">Your Order Summary</string>
    <string name="subtotal_tax_included"><![CDATA[Subtotal<tax included>]]></string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="choose_your_payment_method">Choose your payment method</string>
    <string name="cash">Cash</string>
    <string name="master_card">Master Card</string>
    <string name="visa_card">VISA Card</string>
    <string name="bank_transaction">Bank Transaction</string>
    <string name="complete_the_order">Complete the order</string>
    <string name="color_">Color:</string>
    <string name="gender_">Gender:</string>
    <string name="product_image">product image</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="dateHint">dd/mm/yyyy</string>
    <string name="date_display">%1$02d/%2$02d/%3$d</string>


</resources>