<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.admin.additem.AdItemDetailFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/addMainImageButton"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:foreground="@drawable/dash_button_conner"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="25dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_product_s_main_image"
                android:layout_margin="10dp"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/baseline_add_photo_alternate_24" />

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"/>




        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_information_image"
            android:textFontWeight="600"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="20dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageUploadRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/simple_image_recycler_view_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addInformationImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/dash_button_conner"
            android:text="@string/upload_photos"
            android:layout_marginBottom="13dp"/>

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textFontWeight="600"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="20dp"
            />
        <EditText
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_pink_coner_background_item"
            android:hint="@string/your_product_s_name"
            android:textSize="20sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/white"
            android:autofillHints="@null"
            android:inputType="text"
            android:layout_marginBottom="13dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type"
            android:textFontWeight="600"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="20dp"
            />
        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_spinner"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="13dp"
            style="@style/spinner_item_style"
            tools:listitem="@layout/simple_spinner_item"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_gender"
            android:textFontWeight="600"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="20dp"
            />
        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_spinner"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="13dp"
            style="@style/spinner_item_style"
            tools:listitem="@layout/simple_spinner_item"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_variant"
            android:textFontWeight="600"
            android:layout_marginBottom="3dp"
            android:layout_marginHorizontal="20dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/variantRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="9dp"
            tools:listitem="@layout/variant_recycle_view_item"
            tools:itemCount="2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addVariant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/dash_button_conner"
            android:text="@string/add_variant"
            android:layout_marginBottom="13dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:textFontWeight="600"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="20dp"
            />
        <EditText
            android:id="@+id/descriptonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_pink_coner_background_item"
            android:hint="@string/your_product_s_description"
            android:textSize="20sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/white"
            android:autofillHints="@null"
            android:inputType="text|textMultiLine"
            android:layout_marginBottom="13dp"
            android:layout_marginHorizontal="20dp"
            android:minLines="5"
            android:gravity="top"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textFontWeight="600"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="20dp"
            />
        <EditText
            android:id="@+id/priceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_pink_coner_background_item"
            android:hint="@string/your_product_s_price"
            android:textSize="20sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/white"
            android:autofillHints="@null"
            android:inputType="numberDecimal"
            android:layout_marginBottom="13dp"
            android:layout_marginHorizontal="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addProductButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="25dp"
            android:text="@string/add_product"
            android:background="#753532"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textFontWeight="600"
            />

    </LinearLayout>

</ScrollView>