<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.payment.PaymentFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="30sp"
        android:textFontWeight="600"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_payment_method"
        android:textSize="20sp"
        android:textFontWeight="600"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        />

    <RadioGroup
        android:id="@+id/methodContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="92dp">
        <RadioButton
            android:id="@+id/cast_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/cash"
            android:textSize="14sp"
            android:drawableStart="@drawable/cash_icon"
            android:padding="4dp"
            android:drawablePadding="20dp"
            android:background="@drawable/payment_selected"
            android:textColor="@color/payment_radio_tint_color"
            android:drawableTint="@color/payment_radio_tint_color"

            />

        <RadioButton
            android:id="@+id/master_card_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/master_card"
            android:textSize="14sp"
            android:drawableStart="@drawable/master_card_icon"
            android:padding="4dp"
            android:drawablePadding="20dp"
            android:background="@drawable/payment_selected"
            android:textColor="@color/payment_radio_tint_color"
            android:drawableTint="@color/payment_radio_tint_color"
            android:layout_marginTop="8dp"
            android:enabled="false"
            />
        <RadioButton
            android:id="@+id/visa_card_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/visa_card"
            android:textSize="14sp"
            android:drawableStart="@drawable/visa_icon"
            android:padding="4dp"
            android:drawablePadding="20dp"
            android:background="@drawable/payment_selected"
            android:textColor="@color/payment_radio_tint_color"
            android:drawableTint="@color/payment_radio_tint_color"
            android:layout_marginVertical="8dp"
            android:enabled="false"/>
        <RadioButton
            android:id="@+id/bank_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/bank_transaction"
            android:textSize="14sp"
            android:drawableStart="@drawable/bank_icon"
            android:padding="9.5dp"
            android:drawablePadding="25.5dp"
            android:textColor="@color/payment_radio_tint_color"
            android:drawableTint="@color/payment_radio_tint_color"
            android:background="@drawable/payment_selected"
            android:enabled="false"
            />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/completeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_the_order"
        android:fontFamily="@font/hachicro"
        android:textColor="@color/complete_order_state_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="48dp"
        android:background="@drawable/pink_conner_button"
        android:paddingHorizontal="18dp"
        android:paddingTop="6dp"
        android:enabled="false"
        />
</LinearLayout>