<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:layout_marginVertical="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">
        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/product_main_image"
            android:scaleType="centerCrop"
            android:src="@drawable/test__avatar"
            />
        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/mainImage"
            android:text="@string/test_text"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:layout_marginHorizontal="8dp"
            android:textFontWeight="600"
            />
        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/mainImage"
            app:layout_constraintTop_toBottomOf="@id/productNameTextView"
            android:text="@string/size_selected"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="14dp"
            android:textSize="11sp"
            android:textColor="#7C7C7C"/>

        <TextView
            android:id="@+id/colorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/mainImage"
            app:layout_constraintTop_toBottomOf="@id/sizeTextView"
            android:text="@string/color_"
            android:layout_marginHorizontal="8dp"
            android:textSize="11sp"
            android:textColor="#7C7C7C"
            app:drawableEndCompat="@drawable/color_item"
            android:drawablePadding="5dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:gravity="center_horizontal"
        >
        
        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_display"
            android:layout_gravity="center"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F4D6D5"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            >
            <ImageButton
                android:id="@+id/removeButton"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/baseline_remove_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/remove_button"/>
            <TextView
                android:id="@+id/countTextView"
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:text="999"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/baseline_add_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/add_button"/>
        </LinearLayout>

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_display"
            android:layout_gravity="center"
            android:maxLines="1"/>
        
    </LinearLayout>

</LinearLayout>