<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.listitem.ListItemFragment"
    android:padding="17sp"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/emptyItem"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/your_store_currently_has_no_products_available_we_will_notify_you_as_soon_as_new_products_become_available"
        android:layout_gravity="center"
        android:gravity="center"
        app:drawableLeftCompat="@drawable/baseline_info_outline_24"
        android:drawablePadding="10dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/itemError"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:text="@string/something_was_wrong_when_we_try_to_loading_your_data_please_try_again_now_or_some_time_late"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        app:drawableLeftCompat="@drawable/baseline_warning_24"
        android:drawablePadding="10dp"
        android:visibility="gone"
        />


    <LinearLayout
        android:id="@+id/itemLoadingLayout"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait_this_may_take_a_moment"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_product"
            android:layout_marginBottom="10dp"
            android:textFontWeight="600"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemRecycleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/product_item"
            />
    </LinearLayout>



</FrameLayout>